--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
 	<h2>
-		<a href="https://github.com/DethAriel/ng-recaptcha"><code>ng-recaptcha</code></a> demo plunk (<code>@angular: {{version}}</code>)</h2>
-
+		 Demo </h2>
+<!-- 
 	<h3>Normal mode</h3>
-	<re-captcha></re-captcha>
+	<re-captcha></re-captcha> -->
 
 	<h3>Invisible CAPTCHA</h3>
 	<re-captcha size="invisible" #invisible (resolved)="response = $event"></re-captcha>
@@ -11,7 +11,7 @@
 	<button (click)="invisible.reset()">Reset</button>
 	<h4>Invisible captcha response</h4>
 	<pre>{{ response || '[empty]' }}</pre>
-
+<!-- 
 	<h3>Declarative Forms</h3>
 	<form #declarativeForm="ngForm">
 		<re-captcha [(ngModel)]="declarativeFormCaptchaValue" name="captcha" required></re-captcha>
@@ -22,5 +22,5 @@
 	<form [formGroup]="reactiveForm">
 		<re-captcha formControlName="recaptchaReactive"></re-captcha>
 		<button [disabled]="reactiveForm.invalid">Submit</button>
-	</form>
+	</form> -->
 </div>
